# uvg

./: .gitignore  README.md  pyproject.toml
examples/: docvqa.py  qwen25_vl.py
src/: config.py  data.py  unsloth_train.py  utils.py
uvg/: __init__.py  config.py  data.py  trainer.py  utils.py
