[project]
name = "uvg"
version = "0.1.0"
description = "unsloth vlm grpo"
readme = "README.md"
requires-python = "==3.12"

dependencies = [
    "datasets>=3.5.0",
    "peft>=0.15.2",
    "torch>=2.6.0",
    "transformers==4.51.1",
    "unsloth>=2025.5.8",
    "wandb>=0.19.11",
]

[project.optional-dependencies]
qwen = [
    "qwen-vl-utils>=0.0.11"
]

[tool.setuptools]
packages = ["uvg"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"